--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,11 @@
 name: dart_release_cli
-description: A simple command-line application.
+description: A simple command-line application in Dart.
 version: 1.0.0
-# homepage: https://www.example.com
 
 environment:
   sdk: '>=2.14.4 <3.0.0'
 
-
-# dependencies:
-#   path: ^1.8.0
-
 dev_dependencies:
   lints: ^1.0.0
+  dcli: ^1.9.6
+  yaml: ^3.1.0
